Add tag img into task1.html and add file image1.jpg

--- a/task1.html
+++ b/task1.html
@@ -2,8 +2,11 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <title>task1.html</title>
   </head>
   <body>
-
+    <h1>Welcome to this Website! Have a good day.</h1>
+    <h6>Here some images and other items:</h6>
+    <p><img src=""> </p>
   </body>
 </html>
