Add tags ol, ul, b to the file task1.html

--- a/task1.html
+++ b/task1.html
@@ -7,6 +7,21 @@
   <body>
     <h1>Welcome to this Website! Have a good day.</h1>
     <h6>Here some images and other items:</h6>
-    <p><img src=""> </p>
+    <p><img src="image1.jpg" alt="image1.jpg" title="image1.jpg" width="50%"></p>
+    <p><a href="https://www.google.com/">Click here to go to Google.</a></p>
+    <p>A List of what I am going to do today in Numbers:<br />
+      <ol type="1">
+        <li>Wash Dishes</li>
+        <li>Clean the Kitchen</li>
+        <li>Mop the Floor</li>
+      </ol>
+    </p>
+    <p>A List of my Goals in  Bullet Points:<br />
+      <ul type="disk">
+        <li>Learn HTML</li>
+        <li>Become a Web Developer</li>
+      </ul>
+    </p>
+    <b>Good Luck Learning HTML!</b>
   </body>
 </html>
