Add ul to file task2.html

--- a/task2.html
+++ b/task2.html
@@ -5,6 +5,9 @@
     <title>task2.html</title>
   </head>
   <body>
-
+    <ul>
+      <li>Химическое уравнение</li>
+      <li>Математичская формула</li>
+    </ul>
   </body>
 </html>
