Add chemical equation to task2.html

--- a/task2.html
+++ b/task2.html
@@ -5,8 +5,10 @@
     <title>task2.html</title>
   </head>
   <body>
-    <ul>
-      <li>Химическое уравнение</li>
+    <ul type="disk">
+      <li>Химическое уравнение
+        <p><b>SO<sub>2</sub> + NaOH = Na<sub>2</sub>SO<sub>3</sub> + H<sub>2</sub>O</b></p>
+      </li>
       <li>Математичская формула</li>
     </ul>
   </body>
