Add mathematical equation to task2.html

--- a/task2.html
+++ b/task2.html
@@ -9,7 +9,9 @@
       <li>Химическое уравнение
         <p><b>SO<sub>2</sub> + NaOH = Na<sub>2</sub>SO<sub>3</sub> + H<sub>2</sub>O</b></p>
       </li>
-      <li>Математичская формула</li>
+      <li>Математичская формула
+        <p><b>5x<sup>3</sup> - 5x ( x<sup>2</sup> + 4 ) = 17</b></p>
+      </li>
     </ul>
   </body>
 </html>
