--- a/task3.html
+++ b/task3.html
@@ -5,6 +5,11 @@
     <title>task3.html</title>
   </head>
   <body>
-    
+    <ul type="disk">
+      <li><a href="task1.html">task1.html</a></li>
+      <li><a href="task2.html">task2.html</a></li>
+      <li><a href="https://www.google.com/">https://www.google.com/</a></li>
+      <li></li>
+    </ul>
   </body>
 </html>
