--- a/task3.html
+++ b/task3.html
@@ -6,10 +6,12 @@
   </head>
   <body>
     <ul type="disk">
-      <li><a href="task1.html">task1.html</a></li>
-      <li><a href="task2.html">task2.html</a></li>
-      <li><a href="https://www.google.com/">https://www.google.com/</a></li>
-      <li></li>
+      <li><a href="task1.html" title="Перейти к файлу c Заданием 1">task1.html</a></li>
+      <li><a href="task2.html" title="Перейти к файлу с Заданием 2">task2.html</a></li>
+      <li><a href="https://www.grodno.it-academy.by/" title="Перейти на сайт">
+        https://www.grodno.it-academy.by/</a></li>
+      <li><a href="https://ya.ru/" target="_blank" title="Перейти на сайт">
+        https://ya.ru/</a> </li>
     </ul>
   </body>
 </html>
