--- a/task1.html
+++ b/task1.html
@@ -8,6 +8,42 @@
     </style>
   </head>
   <body>
-
+    <table border="1" width="150px" height="150px">
+      <tr>
+        <td colspan="2"></td>
+        <td colspan="2"></td>
+        <td colspan="2" bgcolor="#fffa69"></td>
+      </tr>
+      <tr height="50px">
+        <td></td>
+        <td colspan="3" rowspan="2" bgcolor="#ff5b2d"></td>
+        <td colspan="2" bgcolor="#fffa69"></td>
+      </tr>
+      <tr>
+        <td rowspan="2"></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td bgcolor="#000000"></td>
+        <td bgcolor="#000000"></td>
+        <td></td>
+        <td colspan="2"></td>
+      </tr>
+      <tr>
+        <td rowspan="3" bgcolor="#fffa69"></td>
+        <td bgcolor="#000000"></td>
+        <td bgcolor="#000000"></td>
+        <td></td>
+        <td colspan="2" rowspan="2" bgcolor="#074481"></td>
+      </tr>
+      <tr>
+        <td colspan="2" rowspan="2"></td>
+        <td bgcolor="#000000"></td>
+      </tr>
+      <tr>
+        <td colspan="3"></td>
+      </tr>
+    </table>
   </body>
 </html>
