Add attribute height to some tags tr

--- a/task1.html
+++ b/task1.html
@@ -8,18 +8,18 @@
     </style>
   </head>
   <body>
-    <table border="1" width="150px" height="150px">
+    <table border="1" width="150px" height="350px">
       <tr>
         <td colspan="2"></td>
         <td colspan="2"></td>
         <td colspan="2" bgcolor="#fffa69"></td>
       </tr>
-      <tr height="50px">
+      <tr height="70px">
         <td></td>
         <td colspan="3" rowspan="2" bgcolor="#ff5b2d"></td>
         <td colspan="2" bgcolor="#fffa69"></td>
       </tr>
-      <tr>
+      <tr height="70">
         <td rowspan="2"></td>
         <td></td>
         <td></td>
