Create list with the planets in the task2.html

--- a/task2.html
+++ b/task2.html
@@ -5,6 +5,34 @@
     <title>task2.html</title>
   </head>
   <body>
-
+    <h3>Спутники некоторых планет</h3>
+    <ul>
+      <li>Земля
+        <ol type="1">
+          <li>Луна</li>
+        </ol>
+      </li>
+      <li>Марс
+        <ol type="1" start="2">
+          <li>Фобос</li>
+          <li>Деймос</li>
+        </ol>
+      </li>
+      <li>Уран
+        <ol type="1" start="4">
+          <li>Ариэль</li>
+          <li>Умбриэль</li>
+          <li>Титания</li>
+          <li>Оберон</li>
+          <li>Миранда</li>
+        </ol>
+      </li>
+      <li>Нептун
+        <ol type="1" start="9">
+          <li>Тритон</li>
+          <li>Нереида</li>
+        </ol>
+      </li>
+    </ul>
   </body>
 </html>
