--- a/task2.html
+++ b/task2.html
@@ -5,6 +5,11 @@
     <title>task2.html</title>
   </head>
   <body>
+    <ul>
+      <li><a href="./task1.html" title="Задание 1">task1</a></li>
+      <li><a href="./task2.html" title="Задание 2">task2</a></li>
+      <li><a href="/task3.html" title="Задание 3">task3</a></li>
+    </ul>
     <h3>Спутники некоторых планет</h3>
     <ul>
       <li>Земля
