Add lists to the task3.html

--- a/task3.html
+++ b/task3.html
@@ -5,6 +5,48 @@
     <title>task3.html</title>
   </head>
   <body>
-
+    <div>
+      <h4>Нобелевские лауреаты</h4>
+      <ol type="I">
+        <li><strong>Премия по химии</strong>
+          <ol type="1">
+            <li>АРРЕНИУС (Arrhenius), Сванте</li>
+            <li>АСТОН (Aston), Фрэнсис Уильям</li>
+            <li>БЕРГИУС (Bergius), Фридрих</li>
+          </ol>
+          <p>......</p>
+          <ol type="1" start="30">
+            <li>ФИШЕР (Fischer), Эмиль</li>
+            <li>ЭЙЛЕР-ХЕЛЬПИН (Euler-Chelpin), Ханс фон</li>
+            <li>ЮРИ (Urey), Гарольд К.</li>
+          </ol>
+        </li>
+        <li><strong>Премия по литературе</strong>
+          <ol type="1">
+            <li>БЕНАВЕНТЕ-И-МАРТИНЕС (Benavente y Martinez), Хасито</li>
+            <li>ВЕРГЕСОН (Bergson), Анри</li>
+            <li>ВЬЕРНСОН (Bjernson), Бьеристерне</li>
+          </ol>
+          <p>......</p>
+          <ol type="1" start="30">
+            <li>ШПИТТЕЛЕР (Spitteler), Карл</li>
+            <li>ЭЙКЕН (Eucken), Рудольф</li>
+            <li>ЭЧЕГАРАЙ (Echegaray), Хосе</li>
+          </ol>
+        </li>
+        <li><strong>Премия мира</strong>
+          <ol type="1">
+            <li>АССЕР (Asser), Тобиас</li>
+            <li>АРНОЛЬДСОН (Arnoldson), Клас</li>
+            <li>БАЙЕР (Bajer), Фредрих</li>
+          </ol>
+          <p>......</p>
+          <ol type="1" start="25">
+            <li>САХАРОВ, Андрей</li>
+            <li>ФРИД (Fried), Альфред</li>
+          </ol>
+        </li>
+      </ol>
+    </div>
   </body>
 </html>
