--- a/task3.html
+++ b/task3.html
@@ -1,4 +1,4 @@
-<DOCTYPE! html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
@@ -14,7 +14,7 @@
             <li>АСТОН (Aston), Фрэнсис Уильям</li>
             <li>БЕРГИУС (Bergius), Фридрих</li>
           </ol>
-          ............
+          <pre>      ............</pre>
           <ol type="1" start="30">
             <li>ФИШЕР (Fischer), Эмиль</li>
             <li>ЭЙЛЕР-ХЕЛЬПИН (Euler-Chelpin), Ханс фон</li>
@@ -27,7 +27,7 @@
             <li>ВЕРГЕСОН (Bergson), Анри</li>
             <li>ВЬЕРНСОН (Bjernson), Бьеристерне</li>
           </ol>
-          ............
+          <pre>      ............</pre>
           <ol type="1" start="30">
             <li>ШПИТТЕЛЕР (Spitteler), Карл</li>
             <li>ЭЙКЕН (Eucken), Рудольф</li>
@@ -40,7 +40,7 @@
             <li>АРНОЛЬДСОН (Arnoldson), Клас</li>
             <li>БАЙЕР (Bajer), Фредрих</li>
           </ol>
-          ............
+          <pre>      ............</pre>
           <ol type="1" start="25">
             <li>САХАРОВ, Андрей</li>
             <li>ФРИД (Fried), Альфред</li>
