Create list in the file task1.html

--- a/lesson-7-html-css/task1.html
+++ b/lesson-7-html-css/task1.html
@@ -28,9 +28,9 @@
       <li>
         <span>Фрукты:</span>
         <ol>
-          <li>Апельсин</li>
-          <li>Слива</li>
-          <li>Яблоко</li>
+          <li class="fruit-ogorod">Апельсин</li>
+          <li class="fruit-ogorod">Слива</li>
+          <li class="fruit-ogorod">Яблоко</li>
         </ol>
       </li>
       <li>
@@ -47,9 +47,9 @@
       <li>
         <span>Фрукты:</span>
         <ol>
-          <li>Вишня</li>
-          <li>Груша</li>
-          <li>Яблоко</li>
+          <li class="fruit-sklad">Вишня</li>
+          <li class="fruit-sklad">Груша</li>
+          <li class="fruit-sklad">Яблоко</li>
         </ol>
       </li>
       <li>
