Add styles to table in task1.html

--- a/lesson-7-html-css/task1.html
+++ b/lesson-7-html-css/task1.html
@@ -66,27 +66,27 @@
         <td colspan="3">Посещение</td>
       </tr>
       <tr>
-        <td>Урок 1</td>
+        <td id="urok1">Урок 1</td>
         <td>Урок 2</td>
         <td>Урок 3</td>
       </tr>
       <tr>
-        <td>Саша</td>
-        <td>1</td>
-        <td>1</td>
-        <td>0</td>
+        <td class="names">Саша</td>
+        <td class="number">1</td>
+        <td class="number">1</td>
+        <td class="number">0</td>
       </tr>
       <tr>
-        <td>Таня</td>
-        <td>1</td>
-        <td>1</td>
-        <td>1</td>
+        <td class="names">Таня</td>
+        <td class="number">1</td>
+        <td class="number">1</td>
+        <td class="number">1</td>
       </tr>
       <tr>
-        <td>Сережа</td>
-        <td>0</td>
-        <td>0</td>
-        <td>0</td>
+        <td class="names">Сережа</td>
+        <td class="number">0</td>
+        <td class="number">0</td>
+        <td class="number">0</td>
       </tr>
     </table>
   </div>
