Finished task2.html

--- a/lesson-7-html-css/task2.html
+++ b/lesson-7-html-css/task2.html
@@ -12,7 +12,7 @@
       <li><a href="task2.html" title="К Новостям">Новости</a></li>
       <li><a href="https://yandex.by/" title="На Яндекс">Яндекс</a></li>
       <li><a href="https://mail.yandex.by/" title="На Яндекс Почту">Яндекс.Почта</a></li>
-      <li><a href="https://mail.yandex.by/" title="На Яндекс Почту" target="_blank">Яндекс.Почта</a></li>
+      <li><a href="https://mail.yandex.by/" title="На Яндекс Почту" target="_blank">Яндекс.Почта</a><span>⇱</span></li>
       <li><a href="https://www.google.com/" title="Google">Google</a></li>
       <li><a href="https://www.google.com/maps" title="Google Maps">Google Maps</a></li>
       <li><a href="https://news.google.com/" title="Google News">Google News</a></li>
