First part Task1.html and Style1.css

--- a/lesson-10-layouts/Task1.html
+++ b/lesson-10-layouts/Task1.html
@@ -6,6 +6,12 @@
   <link rel="stylesheet" href="Style1.css">
 </head>
 <body>
-  
+  <div class="price">
+    <p>Best value</p>
+  </div>
+  <div class="price-name">
+    <p>Iconic graphics</p>
+    <p class="price-name-value"><sup>$</sup><span>25</span><sub>Monthly</sub></p>
+  </div>
 </body>
 </html>
