Second part of Task1.html and Style1.css, add list, classes and container div

--- a/lesson-10-layouts/Task1.html
+++ b/lesson-10-layouts/Task1.html
@@ -6,12 +6,22 @@
   <link rel="stylesheet" href="Style1.css">
 </head>
 <body>
-  <div class="price">
-    <p>Best value</p>
-  </div>
-  <div class="price-name">
-    <p>Iconic graphics</p>
-    <p class="price-name-value"><sup>$</sup><span>25</span><sub>Monthly</sub></p>
+  <div>
+    <div class="price">
+      <p>Best value</p>
+    </div>
+    <div class="price-name">
+      <p>Iconic graphics</p>
+      <p class="price-name-value"><sup>$</sup><span>25</span><sub>Monthly</sub></p>
+    </div>
+    <ul class="price-options">
+      <li class="price-options-item"><img src="arrow.png"><abbr>PHP</abbr>, <abbr>PERL</abbr>, <abbr>ASP</abbr>, <abbr>JSP</abbr>
+      </li>
+      <li class="price-options-item"><img src="arrow.png">SEMI DEDICATED</li>
+      <li class="price-options-item"><img src="arrow.png">Staging or Production</li>
+      <li class="price-options-item"><img src="arrow.png">Unlimited e-Mails</li>
+    </ul>
+    <input class="price-enroll" type="button" value="Enroll today">
   </div>
 </body>
 </html>
