Add folder to tad img

--- a/lesson-10-layouts/Task1.html
+++ b/lesson-10-layouts/Task1.html
@@ -15,11 +15,11 @@
       <p class="price-name-value"><sup>$</sup><span>25</span><sub>Monthly</sub></p>
     </div>
     <ul class="price-options">
-      <li class="price-options-item"><img src="arrow.png"><abbr>PHP</abbr>, <abbr>PERL</abbr>, <abbr>ASP</abbr>, <abbr>JSP</abbr>
+      <li class="price-options-item"><img src="images/arrow.png"><abbr>PHP</abbr>, <abbr>PERL</abbr>, <abbr>ASP</abbr>, <abbr>JSP</abbr>
       </li>
-      <li class="price-options-item"><img src="arrow.png">SEMI DEDICATED</li>
-      <li class="price-options-item"><img src="arrow.png">Staging or Production</li>
-      <li class="price-options-item"><img src="arrow.png">Unlimited e-Mails</li>
+      <li class="price-options-item"><img src="images/arrow.png">SEMI DEDICATED</li>
+      <li class="price-options-item"><img src="images/arrow.png">Staging or Production</li>
+      <li class="price-options-item"><img src="images/arrow.png">Unlimited e-Mails</li>
     </ul>
     <input class="price-enroll" type="button" value="Enroll today">
   </div>
