Markup task1.html

--- a/lesson-11-layouts/Task1.html
+++ b/lesson-11-layouts/Task1.html
@@ -4,8 +4,55 @@
   <meta charset="UTF-8">
   <title>Task1</title>
   <link rel="stylesheet" href="Style1.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,800" rel="stylesheet">
 </head>
 <body>
-  
+  <section>
+    <h2 class="section__title">We have a very flexible offers for you to choose</h2>
+    <div class="proposals">
+      <div class="price standart">
+        <h3 class="price__title">Standart</h3>
+        <h4 class="price__content">Iconic Graphics</h4>
+        <p class="price__value">
+          <sup>$</sup>10<sub>Monthly</sub>
+        </p>
+        <ul class="price__options">
+          <li>Unmetered Traffic</li>
+          <li>Unlimited Domain</li>
+          <li>Unlimited Databases</li>
+          <li>Unlimited e-Mails</li>
+        </ul>
+        <a class="price__cta-button">Enroll Today</a>
+      </div>
+      <div class="price best-value">
+        <h3 class="price__title">Best value</h3>
+        <h4 class="price__content">Iconic Graphics</h4>
+        <p class="price__value">
+          <sup>$</sup>25<sub>Monthly</sub>
+        </p>
+        <ul class="price__options">
+          <li>PHP, PERL, ASP, JSP</li>
+          <li>SEMI DEDICATED</li>
+          <li>Staging or Production</li>
+          <li>Unlimited e-Mails</li>
+        </ul>
+        <a class="price__cta-button">Enroll Today</a>
+      </div>
+      <div class="price ultimate">
+        <h3 class="price__title">Ultimate</h3>
+        <h4 class="price__content">Iconic Graphics</h4>
+        <p class="price__value">
+          <sup>$</sup>35<sub>Monthly</sub>
+        </p>
+        <ul class="price__options">
+          <li>Semi Dedicated</li>
+          <li>1TB Storage</li>
+          <li>Faster Site, Better SEO</li>
+          <li>Unlimited e-Mails</li>
+        </ul>
+        <a class="price__cta-button">Enroll Today</a>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
