--- a/lesson-11-layouts/Task2.html
+++ b/lesson-11-layouts/Task2.html
@@ -6,6 +6,26 @@
   <link rel="stylesheet" href="Style2.css">
 </head>
 <body>
-  
+  <section class="comments">
+    <h3 class="comments__header"><span>What</span> client says</h3>
+    <div class="comments__body">
+      <div class="comments__item">
+        <img class="comments__avatar" src="knives-ninja.png" alt="knives-ninja" title="knives-ninja">
+        <div class="comments__text">
+          <p class="comments__text-header">- Staciya Trollio <span>Customer</span></p>
+          <p class="comments__text-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, odit
+            voluptatem? Cupiditate dolorum ipsum nisi odio sed.</p>
+        </div>
+      </div>
+      <div class="comments__item">
+        <img class="comments__avatar" src="ponsy-deer.png" alt="ponsy-deer" title="ponsy-deer">
+        <div class="comments__text">
+          <p class="comments__text-header">- David Soul <span>Customer</span></p>
+          <p class="comments__text-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, odit
+            voluptatem? Cupiditate dolorum ipsum nisi odio sed.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
