Add all styles to the style2.css

--- a/lesson-11-layouts/Task2.html
+++ b/lesson-11-layouts/Task2.html
@@ -10,7 +10,7 @@
     <h3 class="comments__header"><span>What</span> client says</h3>
     <div class="comments__body">
       <div class="comments__item">
-        <img class="comments__avatar" src="knives-ninja.png" alt="knives-ninja" title="knives-ninja">
+        <img class="comments__avatar" src="images/knives-ninja.png" alt="knives-ninja" title="knives-ninja">
         <div class="comments__text">
           <p class="comments__text-header">- Staciya Trollio <span>Customer</span></p>
           <p class="comments__text-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, odit
@@ -18,7 +18,7 @@
         </div>
       </div>
       <div class="comments__item">
-        <img class="comments__avatar" src="ponsy-deer.png" alt="ponsy-deer" title="ponsy-deer">
+        <img class="comments__avatar" src="images/ponsy-deer.png" alt="ponsy-deer" title="ponsy-deer">
         <div class="comments__text">
           <p class="comments__text-header">- David Soul <span>Customer</span></p>
           <p class="comments__text-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, odit
