--- a/lesson-12-backgrounds/index-ready-spot-host-test-project/packages/index.html
+++ b/lesson-12-backgrounds/index-ready-spot-host-test-project/packages/index.html
@@ -12,7 +12,24 @@
 </head>
 
 <body>
-  <!-- Write your code here-->
+  <article class="plan">
+    <h1 class="plan__annotation">RECOMMENDED</h1>
+    <h1 class="plan__title">Our PLUS Plan</h1>
+    <h2 class="plan__feature">The most popular choice of our customers.</h2>
+    <p class="plan__description">Benefit from increased storage and faster support to ensure that your mission-critical
+      data and applications are always available!</p>
+  </article>
+  <article class="plan">
+    <h1 class="plan__title">Our FREE Plan</h1>
+    <h2 class="plan__feature">An extremely solid start into our hosting world.</h2>
+    <p class="plan__description">Get started immediately at zero cost!</p>
+  </article>
+  <article class="plan premium">
+    <h1 class="plan__title">Our PREMIUM Plan</h1>
+    <h2 class="plan__feature">All your enterprise needs. Instant support, guaranteed uptime.</h2>
+    <p class="plan__description">The best solution for small to large enterprises. Because hosting shouldn't be in the
+      way!</p>
+  </article>
 </body>
 
 </html>
