Markup customers/index.html

--- a/lesson-12-backgrounds/index-ready-spot-host-test-project/customers/index.html
+++ b/lesson-12-backgrounds/index-ready-spot-host-test-project/customers/index.html
@@ -13,7 +13,58 @@
 </head>
 
 <body>
-  <!-- Write your code here-->
+  <header class="main-header">
+    <div>
+      <a href="index.html" class="main-header__brand">
+        <img src="../images/logo.png" alt="SpotHost - Your favorite hosting company">
+      </a>
+    </div>
+    <nav class="main-nav">
+      <ul class="main-nav__items">
+        <li class="main-nav__item">
+          <a href="../packages/index.html">Packages</a>
+        </li>
+        <li class="main-nav__item">
+          <a href="../customers/index.html">Customers</a>
+        </li>
+        <li class="main-nav__item main-nav__item--cta">
+          <a href="start-hosting/index.html">Start Hosting</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <div class="customer__container">
+      <div class="customer__photo"><img src="../images/customer-1.jpg" alt="Mike Statham" title="Mike Statham"></div>
+      <div class="customer__description">
+        <p class="customer__description-name">Mike Statham</p>
+        <p class="customer__description-achievement">Founder of tech-analysis.com</p>
+        <p class="customer__description-himself">SpotHost helped me realize my project with a highly constrained budget
+          in like no time.</p>
+      </div>
+    </div>
+    <div class="customer__container">
+      <div class="customer__photo"><img src="../images/customer-2.jpg" alt="John Mellow" title="John Mellow"></div>
+      <div class="customer__description">
+        <p class="customer__description-name">John Mellow</p>
+        <p class="customer__description-achievement">Hosts his private videos on SpotHost</p>
+        <p class="customer__description-himself">I worked as a blogger and always looked for an integrated hosting and
+          file storage solution. I found it in SpotHost.</p>
+      </div>
+    </div>
+  </main>
+  <footer class="main-footer">
+    <nav>
+      <ul class="main-footer__links">
+        <li class="main-footer__link">
+          <a href="#">Support</a>
+        </li>
+        <li class="main-footer__link">
+          <a href="#">Terms of Use</a>
+        </li>
+      </ul>
+    </nav>
+  </footer>
 </body>
 
 </html>
