Add styles to customers/customers.css and fix markup in customers/index.html

--- a/lesson-12-backgrounds/index-ready-spot-host-test-project/customers/index.html
+++ b/lesson-12-backgrounds/index-ready-spot-host-test-project/customers/index.html
@@ -36,6 +36,7 @@
   <main>
     <div class="customer__container">
       <div class="customer__photo"><img src="../images/customer-1.jpg" alt="Mike Statham" title="Mike Statham"></div>
+      <div class="clean"></div>
       <div class="customer__description">
         <p class="customer__description-name">Mike Statham</p>
         <p class="customer__description-achievement">Founder of tech-analysis.com</p>
@@ -44,13 +45,17 @@
       </div>
     </div>
     <div class="customer__container">
-      <div class="customer__photo"><img src="../images/customer-2.jpg" alt="John Mellow" title="John Mellow"></div>
+      <div class="customer__photo">
+        <img src="../images/customer-2.jpg" alt="John Mellow" title="John Mellow">
+      </div>
+      <div class="clean"></div>
       <div class="customer__description">
         <p class="customer__description-name">John Mellow</p>
         <p class="customer__description-achievement">Hosts his private videos on SpotHost</p>
         <p class="customer__description-himself">I worked as a blogger and always looked for an integrated hosting and
           file storage solution. I found it in SpotHost.</p>
       </div>
+      <div class="clean"></div>
     </div>
   </main>
   <footer class="main-footer">
